add video fscreen button

--- a/public/index.html
+++ b/public/index.html
@@ -405,7 +405,8 @@
 
 
       </div>
-      <div style="position: absolute; right: 4%; top: 2%; height: 100px; color: #0ee54f; cursor: pointer;  font-size: 48px; font-weight: 900; " id="fullscreen-button">ఠメ</div>
+      <div style="position: absolute; right: 4%; top: 2%; height: 100px; color: #0ee54f; cursor: pointer;  font-size: 56px; font-weight: 900; " id="fullscreen-button">ఠ</div>
+      <div style="position: absolute; right: 4%; top: 4%; height: 100px; color: #0ee54f; cursor: pointer;  font-size: 56px; font-weight: 900; " id="fullscreen-button-stream">ⵙ</div>
     </div>
     
 
