--- a/public/index.html
+++ b/public/index.html
@@ -360,6 +360,7 @@
   display: inline-block;
   width: 100%;
   height: 100%;
+  display: none;
 ">
   <video id="main-video" autoplay style="
     display: none;
