--- a/public/index.html
+++ b/public/index.html
@@ -475,19 +475,40 @@
 
         <!-- HUD Elements -->
         <div style="
+        width: 100%;
       position: absolute;
-      top: 10px;
-      left: 20px;
+      top: 0px;
+      left: 0px;
       font-family: 'Courier New', Courier, monospace;
       color: #28e717;
-      text-shadow: 0 0 10px #28e717;
       pointer-events: auto;
+
     ">
           <span id="fullscreen-timer" style="
+        position: relative;
         font-size: 38px;
         font-weight: bold;
-        font-family: 'Courier New', monospace;">
+        top: 20px;
+        left: 20px;
+        font-family: 'Courier New', monospace;
+    background: radial-gradient(ellipse at 50% 50%, rgba(0, 0, 0, 0.19) 0%, rgba(130, 238, 159, 0.02) 100%);">
+    00:00
           </span>
+
+
+          <span id="sources-info" style="
+        position: relative;
+        width: 100%;
+        margin-left: 30%;
+        top: 20px;
+        font-size: 38px;
+        font-weight: bold;
+        font-family: 'Courier New', monospace;
+     background: radial-gradient(ellipse at 50% 50%, rgba(0, 0, 0, 0.19) 0%, rgba(130, 238, 159, 0.02) 100%);">
+            CAMERA {1} of {N}
+          </span>
+
+
         </div>
 
         <!-- Right side stats -->
