added video button & streamers info

--- a/public/index.html
+++ b/public/index.html
@@ -504,8 +504,8 @@
         font-size: 38px;
         font-weight: bold;
         font-family: 'Courier New', monospace;
-     background: radial-gradient(ellipse at 50% 50%, rgba(0, 0, 0, 0.19) 0%, rgba(130, 238, 159, 0.02) 100%);">
-            CAMERA {1} of {N}
+        background: radial-gradient(ellipse at 50% 50%, rgba(0, 0, 0, 0.19) 0%, rgba(130, 238, 159, 0.02) 100%);">
+            CAMERA 1 of N
           </span>
 
 
@@ -589,6 +589,10 @@
       <div style="display: flex; flex-direction: column; gap: 20px;">
         <button class="button" style="background-image: url(images/photo_camera.png);" id="tmpID">
           <div id="snaps-button" style="opacity: 70%;" tabindex="-1"></div>
+        </button>
+
+                <button class="button" style="background-image: url(images/video_cam.png); background-size: contain; opacity: 70%;" id="video-button">
+
         </button>
 
 
