fix peer list update & css stuff

--- a/public/index.html
+++ b/public/index.html
@@ -584,9 +584,11 @@
     <audio id="audio-container"></audio>
 
     <div id="controls"
-      style="position: absolute; top: 8%; left: 1%; visibility: hidden; background: linear-gradient(.25turn, black, 78%, transparent);">
+      style="position: absolute; top: 8%; left: 1%; visibility: hidden; 
+      background: linear-gradient(.25turn, black, 78%, transparent);
+      box-shadow: -20px 0px black;">
 
-      <div style="display: flex; flex-direction: column; gap: 20px;">
+      <div style="display: flex; flex-direction: column; gap: 14px;">
         <button class="button" style="background-image: url(images/photo_camera.png);" id="tmpID">
           <div id="snaps-button" style="opacity: 70%;" tabindex="-1"></div>
         </button>
