add stream quality switch

--- a/public/index.html
+++ b/public/index.html
@@ -593,9 +593,14 @@
           <div id="snaps-button" style="opacity: 70%;" tabindex="-1"></div>
         </button>
 
-                <button class="button" style="background-image: url(images/video_cam.png); background-size: contain; opacity: 70%;" id="video-button">
+        <button class="button" style="height: 80px; background: url(images/video_cam.png); background-size: contain; opacity: 70%;" id="video-button">
 
         </button>
+                  <span>
+          <button id="low-button" class="button" style="width: 40px; height: 40px; min-height: 10px; padding-bottom: 0%; line-height: 1; font-size: 36px;" tabindex="-1">L</button>
+          <button id="med-button" class="button" style="width: 40px; height: 40px; min-height: 10px; padding-bottom: 0%; line-height: 1; font-size: 36px;" tabindex="-1">M</button>
+          <button id="hig-button" class="button" style="width: 40px; height: 40px; min-height: 10px; padding-bottom: 0%; line-height: 1; font-size: 36px;  z-index: 9998;"  tabindex="-1">H</button>
+          </span>
 
 
         <button id="watch-button" class="button"
