--- a/public/index.html
+++ b/public/index.html
@@ -497,14 +497,14 @@
 
 
           <span id="sources-info" style="
-        position: relative;
-        width: 100%;
-        margin-left: 30%;
+        position: absolute;       
+        right: 10px;
         top: 20px;
         font-size: 38px;
         font-weight: bold;
+              color: #000000;
         font-family: 'Courier New', monospace;
-        background: radial-gradient(ellipse at 50% 50%, rgba(0, 0, 0, 0.39) 0%, rgba(130, 238, 159, 0.02) 100%);">
+        background: radial-gradient(ellipse at 50% 50%, rgba(25, 255, 56, 0.39) 0%, rgba(130, 238, 159, 0.02) 100%);">
             CAMERA 1 of N
           </span>
 
@@ -643,15 +643,15 @@
           tabindex="0"></button>
         <span>
           <button id="local-save-button" class="button"
-            style="width: 60px; height: 40px; font-size: 36px; line-height: 22px;" tabindex="0"><br />১୪</button>
-          <button id="remote-save-button" class="button" style="width: 60px; height: 40px; margin-left: 6px;"
+            style="width: 60px; height: 60px; font-size: 36px; line-height: 22px; padding-bottom: 0%" tabindex="0"><br />১୪</button>
+          <button id="remote-save-button" class="button" style="width: 60px; height: 60px; margin-left: 6px; padding-bottom: 0%"
             tabindex="0">໗</button>
         </span>
         <span>
-          <button id="chart-button" class="button" style="width: 60px; height: 40px; font-size: 36px; line-height: 22px; 
-        background-image: url(./images/chart.png); background-size: contain" tabindex="0">
-            <button id="trace-button" class="button" style="width: 60px; height: 40px; font-size: 36px; margin-left: 10px; line-height: 22px; 
-        background-image: url(./images/6956441_preview.png);" tabindex="0">
+          <button id="chart-button" class="button" style="width: 60px; height: 60px; font-size: 36px; line-height: 22px; 
+        background-image: url(./images/chart.png); background-size: contain; padding-bottom: 0%" tabindex="0">
+            <button id="trace-button" class="button" style="width: 60px; height: 60px; font-size: 36px; margin-left: 10px; line-height: 22px; 
+        background-image: url(./images/6956441_preview.png); padding-bottom: 0%" tabindex="0">
         </span>
 
 
