removed tmp stuff & some ui changes

--- a/public/index.html
+++ b/public/index.html
@@ -587,10 +587,10 @@
     <div id="controls"
       style="position: absolute; top: 8%; left: 1%; visibility: hidden; 
       background: linear-gradient(.25turn, black, 78%, transparent);
-      box-shadow: -20px 0px black;">
+      box-shadow: -20px 0px black; opacity: 70%;">
 
       <div style="display: flex; flex-direction: column; gap: 14px;">
-        <button class="button" style="background-image: url(images/photo_camera.png);" id="tmpID">
+        <button class="button" style="background-image: url(images/photo_cam.png); background-size: cover;" id="tmpID">
           <div id="snaps-button" style="opacity: 70%;" tabindex="-1"></div>
         </button>
 
@@ -640,7 +640,7 @@
             </div>
           </div>
         </button>
-        <button id="voice-button" class="button" style="background-image: url(./images/music_plant.png); opacity: 100%;"
+        <button id="voice-button" class="button" style="background-image: url(./images/loud_speaker.png); background-size: cover; opacity: 100%;"
           tabindex="0"></button>
         <span>
           <button id="local-save-button" class="button"
