--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
+<head>
 
+</head>
 
 <iframe id="player_youtube" width="0" height="0" src="" title="YouTube video player" style="display: none;"
   frameborder="0"
@@ -427,14 +429,14 @@
   height: 100%;
   display: none;
 ">
-      <video id="main-video" autoplay style="
+      <video id="main-video" crossorigin="anonymous" autoplay style="
     display: none;
     visibility: hidden;
     width: 100%;
     height: 100%;
     object-fit: contain; /* Ensures video maintains aspect ratio */
     background: #000000;
-  "></video>
+  "><source src="http://195.137.244.53:8888/camera/index.m3u8" type="application/vnd.apple.mpegurl"></video>
 
       <div id="fullscreen-overlay" style="
     position: absolute;
