--- a/public/index.html
+++ b/public/index.html
@@ -429,7 +429,14 @@
   height: 100%;
   display: none;
 ">
-
+<video id="main-video" autoplay style="
+    display: none;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* Ensures video maintains aspect ratio */
+    background: #000000;
+  "></video>
 
       <div id="fullscreen-overlay" style="
     position: absolute;
