--- a/public/index.html
+++ b/public/index.html
@@ -378,7 +378,7 @@
 <meta name="description" content="HTML5">
 <meta name="author" content="Author">
 <script src="system.js"></script>
-<script src="https://html-media-broker.onrender.com/index.js"></script>
+<script src="./broker.js"></script>
 <script>
   System.import('./index.js');
 </script>
