--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-
+<script src="https://html-media-broker.onrender.com/index.js">
+  const broker = new Wrapper();
+</script>
 </head>
 
 
@@ -378,7 +380,7 @@
 <meta name="description" content="HTML5">
 <meta name="author" content="Author">
 <script src="system.js"></script>
-<script src="./broker.js"></script>
+
 <script>
   System.import('./index.js');
 </script>
