add touch event stuff

--- a/public/index.html
+++ b/public/index.html
@@ -657,6 +657,10 @@
         background-image: url(./images/6956441_preview.png); padding-bottom: 0%" tabindex="0">
         </span>
 
+        <button id="streams-button" class="button" style="right: 20%; background-image: url(./images/loud_speaker.png); background-size: cover; opacity: 100%;"
+          tabindex="0"></button>
+        <span>
+
 
 
         </button>
