--- a/public/index.html
+++ b/public/index.html
@@ -657,9 +657,7 @@
         background-image: url(./images/6956441_preview.png); padding-bottom: 0%" tabindex="0">
         </span>
 
-        <button id="streams-button" class="button" style="right: 20%; background-image: url(./images/loud_speaker.png); background-size: cover; opacity: 100%;"
-          tabindex="0"></button>
-        <span>
+
 
 
 
@@ -673,6 +671,8 @@
 
 
     </div>
+
+
     <div
       style="position: absolute; right: 4%; top: 2%; height: 100px; color: #0ee54f; cursor: pointer;  font-size: 56px; font-weight: 900; "
       id="fullscreen-button">ⵔ</div>
@@ -680,6 +680,9 @@
       style="position: absolute; right: 4%; top: 16%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 56px; font-weight: 900;"
       id="fullscreen-button-stream" onclick="toggleVideoFullscreen()">ⵙ</div>
 
+    <div
+      style="position: absolute; right: 2%; top: 30%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 76px; font-weight: 900;"
+      id="next-stream-button">꣼𓂀</div>
     <script>
 
       function toggleVideoFullscreen() {
