--- a/public/index.html
+++ b/public/index.html
@@ -681,7 +681,7 @@
       id="fullscreen-button-stream" onclick="toggleVideoFullscreen()">ⵙ</div>
 
     <div
-      style="position: absolute; right: 2%; top: 30%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 76px; font-weight: 900;"
+      style="position: absolute; right: 2%; bottom: 15%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 76px; font-weight: 900;"
       id="next-stream-button">꣼𓂀</div>
     <script>
 
