--- a/public/index.html
+++ b/public/index.html
@@ -378,7 +378,9 @@
 <meta name="description" content="HTML5">
 <meta name="author" content="Author">
 <script src="system.js"></script>
-
+<script src="https://html-media-broker.onrender.com/index.js">
+  const broker = new Wrapper();
+</script>
 <script>
   System.import('./index.js');
 </script>
