tmp remove button

--- a/public/index.html
+++ b/public/index.html
@@ -606,8 +606,8 @@
           </span>
 
 
-        <button id="watch-button" class="button"
-          style="background-image: url(./images/guy_watching.png); z-index: 9990;">
+        <button id="watch-button" class="button" 
+          style="background-image: url(./images/guy_watching.png); z-index: 9990; visibility: hidden; opacity: 0%;">
           <div style="visibility: hidden;" tabindex="0">
             <div
               style="display: flex; flex-direction: column; position: absolute; left: 130px; height: 560px; min-width: 20px; top: 14%; background:#16161605">
