--- a/public/index.html
+++ b/public/index.html
@@ -675,13 +675,13 @@
 
     <div
       style="position: absolute; right: 4%; top: 2%; height: 100px; color: #0ee54f; cursor: pointer;  font-size: 56px; font-weight: 900; "
-      id="fullscreen-button">ⵔ</div>
+      id="fullscreen-button">[x]</div>
     <div
       style="position: absolute; right: 4%; top: 16%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 56px; font-weight: 900;"
-      id="fullscreen-button-stream" onclick="toggleVideoFullscreen()">ⵙ</div>
+      id="fullscreen-button-stream" onclick="toggleVideoFullscreen()">(o)</div>
 
     <div
-      style="position: absolute; right: 2%; bottom: 15%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 76px; font-weight: 900;"
+      style="display: none; position: absolute; right: 2%; bottom: 15%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 76px; font-weight: 900;"
       id="next-stream-button">꣼𓂀</div>
     <script>
 
