--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,103 @@
 
 
 <style>
+  .snapshot-list {
+  height: 100%;                   /* или конкретная высота, например 80vh */
+                /* чтобы не растягивался на весь экран */
+  overflow-y: auto;               /* основной скролл по вертикали */
+  overflow-x: hidden;             /* горизонтальный скролл скрываем */
+  -webkit-overflow-scrolling: touch;  /* плавный скролл на iOS / мобильных */
+  padding: 16px;
+  box-sizing: border-box;
+  margin-left: 33%;
+}
+
+  .snapshot-list ul {
+
+    left: 25%;
+    padding-left: unset;
+    display: grid;
+    gap: 16px;
+    width: 50%;
+
+    list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+snapshot-list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.snapshot-list::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.snapshot-list::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.snapshot-list::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Для мобильных — улучшенная чувствительность тача */
+@media (max-width: 768px) {
+  .snapshot-list {
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+  }
+}
+
+.snapshot-item {
+  cursor: pointer;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  text-align: center;
+  padding: 8px;
+      background-color: black;
+    color: lightgreen;
+}
+
+.snapshot-item img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+.snapshot-detail {
+  text-align: center;
+}
+
+.detail-image {
+  max-width: 90%;
+  max-height: 70vh;
+  margin: 16px auto;
+  display: block;
+}
+
+.back-btn {
+  margin: 16px;
+  padding: 8px 16px;
+  font-size: 16px;
+}
+
+.detail-info {
+  margin: 20px auto;
+  max-width: 800px;
+  text-align: left;
+}
+
+pre {
+  background: #f5f5f5;
+  padding: 12px;
+  border-radius: 6px;
+  overflow-x: auto;
+}
   .center {
     height: 100vh;
     display: flex;
@@ -445,8 +542,8 @@
     height: 100%;
    
     z-index: 10000;
-    pointer-events: none;
-    overflow: hidden;
+
+
   ">
 
         <!-- Glitch effect border -->
@@ -685,8 +782,8 @@
       style="position: absolute; right: 4%; top: 2%; height: 100px; color: #0ee54f; cursor: pointer;  font-size: 56px; font-weight: 900; "
       id="fullscreen-button">〄</div>
     <div
-      style="display: none;position: absolute; right: 4%; top: 16%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 56px; font-weight: 900;"
-      id="fullscreen-button-stream" onclick="toggleVideoFullscreen()">〄</div>
+      style="position: absolute; z-index: 10000; left: 4%; bottom: 4%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 56px; font-weight: 900;"
+      id="photo-list-button">||||</div>
 
     <div
       style="display: none; position: absolute; right: 2%; bottom: 15%; height: 100px; color: #0ee54f; cursor: pointer; font-size: 76px; font-weight: 900;"
